improve "coinbase" task